// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerTitle renders 1`] = `
<bannerTitle__BannerTitleWrapper>
  <TestBannerTitle>
    foo
  </TestBannerTitle>
</bannerTitle__BannerTitleWrapper>
`;

exports[`BannerTitle renders child text  1`] = `
<bannerTitle__BannerTitleWrapper>
  <TestBannerTitle>
    Here is a test title!
  </TestBannerTitle>
</bannerTitle__BannerTitleWrapper>
`;
